# guidanceLLM

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.db  README.md  alembic.ini  clean_pycache.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  elyza_test.py  memory_release.py  test.py
backend/: celerybeat-schedule  pyproject.toml  requirements.txt  test.db
backend/api_gateway/: Dockerfile  requirements.txt
backend/api_gateway/app/: chat_router.py  health.py  main.py  security.py
backend/api_gateway/app/api/ v1/: auth.py  chat.py  sessions.py
backend/api_gateway/app/api/v1/: auth.py  chat.py  navigation.py  plans.py  sessions.py
backend/scripts/: 01_build_knowledge_graph.py  GPUcomfirm.py  cache_osrm_nodes.py  load_access_points.py  load_spots.py
backend/shared/: celery_app.py  schemas.py  state.py
backend/shared/app/: celery_app.py  database.py  models.py  schemas.py  tasks.py
backend/shared/app/migrations/: alembic.ini  env.py
backend/shared/app/migrations/versions/: 0009_sessions_plans_stops.py  0010_finalize_fks_and_mv.py  0011_align_models.py  0012_conversation_history.py  0013_navigation_route_fields.py  20250815_01_add_pre_generated_guides.py  20250815_02_add_conversation_embeddings_and_mv.py  20250819_00_add_geom_to_access_points.py  20250820_04_create_access_points.py  20250820_05_finalize_fks_and_mv.py  20250820_06_create_mv_after_parents.py  20250820_07_cleanup_ap_geom_index.py  20250820_08_create_spots_table.py  env.py
backend/shared/app/services/: navigation_events.py
backend/test/: conftest.py  pytest.ini
backend/test/1.Hybrid route calculation/: test_geojson_profile_properties.py
backend/test/1.Hybrid route calculation/integration/: test_osrm_client.py
backend/test/1.Hybrid route calculation/unit/: test_drive_rules.py  test_routing_hybrid_unit.py
backend/test/integration/: test_itinerary_summarize.py  test_routing_hybrid.py
backend/test/unit/: test_access_points_repo.py  test_routing_hybrid_unit.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_embeddings_smoke.py  test_health.py  test_sessions.py
backend/tests/e2e/: conftest.py  test_information_flow.py  test_navigation_flow.py  test_planning_flow.py
backend/vectorstore/: chroma.sqlite3
backend/vectorstore/ja/: chroma.sqlite3  chroma.sqlite3-journal
backend/vectorstore/ja/f61b5ba8-a12d-403e-b278-2821ebb98a6f/: index_metadata.pickle
backend/worker/: Dockerfile  requirements.txt
backend/worker/app/: entrypoint.sh  init_db_script.py  tasks.py
backend/worker/app/ rag/: retriever.py
backend/worker/app/db/: models.py  session.py
backend/worker/app/graph/: agent_chain.py  build_graph.py  intent_tools.py  nodes.py  tools.py
backend/worker/app/rag/: retriever.py
backend/worker/app/services/: embeddings.py  memory_service.py  planning_service.py  planning_spot_service.py  route_service.py  長期記憶の仕組み.txt
backend/worker/app/services/information/: crud_spot.py  information_service.py  weather_api.py  web_crawler.py
backend/worker/app/services/itinerary/: crud_plan.py  itinerary_service.py
backend/worker/app/services/llm/: client.py  llm_service.py
backend/worker/app/services/llm/prompts/: schemas.py  templates.py
backend/worker/app/services/navigation/: geospatial_utils.py  navigation_service.py
backend/worker/app/services/orchestration/: graph.py  router.py  state.py
backend/worker/app/services/orchestration/nodes/: information_nodes.py  itinerary_nodes.py  navigation_nodes.py  shared_nodes.py
backend/worker/app/services/routing/: access_points_repo.py  client.py  drive_rules.py  routing_service.py
backend/worker/app/services/voice/: stt_handler.py  tts_handler.py  voice_service.py
backend/worker/data/: POI.json  POIに関するメモ.txt  chokai_routes.geojson  spots_for_planning.json  test.json  test.json~  test_routes.csv
backend/worker/data/knowledge/ja/facilities/: facility_trailhead_haraigawa.md
backend/worker/data/knowledge/ja/nature/: nature_wetland_kuwanokidai_flora.md
backend/worker/data/knowledge/ja/spots/: spot_botsumeki_park.md  spot_chokai_panorama_park.md  spot_dohara_falls.md  spot_hanadate_park.md  spot_juroku_rakan.md
backend/worker/data/vectorstore/ja/: chroma.sqlite3
backend/worker/data/vectorstore/ja/a2716858-5996-4c25-b511-d720aed3044e/: index_metadata.pickle
frontend/: Dockerfile
frontend/streamlit_app/: app.py
