[tool.poetry]
name = "guidance-llm-backend"
version = "0.1.0"
description = "Backend services for the Guidance LLM application."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false  # ルートをパッケージとしては扱わない（配布しない）運用なら true/false 適宜

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
PyJWT = ">=2.8,<3"           # `import jwt` が使える本体

# --- DB/ベクトル ---
pgvector = "^0.3.2"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.30"
geoalchemy2 = "^0.14.6"

# --- Vectorstore (RAG) ---
chromadb = "^0.5.4"
sentence-transformers = "^3.0.1"

# --- API Gateway & Core ---
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.1"

# --- Security ---
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"

# --- Worker & Asynchronous Tasks ---
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.0.4"
watchfiles = "^0.21.0"

# --- LangChain & AI ---
langchain = "^0.2.1"
langchain-core = "^0.2.3"
langgraph = "^0.0.60"
ollama = "^0.2.1"

# --- Voice Services ---
TTS = "^0.22.0"
pyyaml = "^6.0.1"
pydub = "^0.25.1"
numpy = "^1.26.4"
torch = "^2.3.0"  # 必要に応じてCPU/GPU版を環境で切替
faster-whisper = "^1.0.0"  # 追加：軽量・高速なWhisper実装（CTranslate2ベース）

# --- Information Services ---
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"

# --- Geospatial Services ---
shapely = "^2.0.4"
pyproj = "^3.6.1"
geojson = "^3.1.0"

[tool.poetry.group.dev.dependencies]
# 今後、テストライブラリ(pytest)やリンター(ruff)などをここに追加
# pytest = "^8.2.2"
# ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
